# LLMEvalKit

./: .gitignore  LEADERBOARD.md  README.md  pyproject.toml  run.py
.litellm_cache/: cache.db
configs/examples/: anthropic_claude.yaml  custom_pytorch_model.yaml  local_llamacpp_gguf.yaml  local_llamaserver_existing.yaml  openai_gpt4o.yaml  test_lfm25_350m.yaml  test_lfm2_1_2b.yaml  test_qwen35_0_8b.yaml  test_qwen3_0_6b.yaml  test_running_shim.yaml  vllm_hf.yaml
llmevalkit/: __init__.py  cli.py  leaderboard.py
llmevalkit/adapters/: __init__.py  anthropic_passthrough.py  base.py  custom_shim.py  gguf_llamacpp.py  hf_vllm.py  openai_passthrough.py
llmevalkit/profiles/: __init__.py  agentic.yaml  bigcodebench_quick.yaml  chat.yaml  coding.yaml  coding_quick.yaml  full.yaml  inspect_quick.yaml  knowledge.yaml  lighteval_quick.yaml  longctx.yaml  math.yaml  multilingual.yaml  quick.yaml  rag.yaml  reasoning.yaml  safety.yaml  smallmodel_bench.yaml  windows_demo.yaml
llmevalkit/results/: __init__.py  report.py  storage.py
llmevalkit/runners/: __init__.py  arena_hard.py  base.py  bfcl.py  bigcodebench.py  evalchemy.py  evalplus.py  harmbench.py  inspect_ai.py  lighteval.py  livecodebench.py  lm_eval_harness.py  mini_swe_agent.py  ruler.py  simple_chat.py
results/: COMPARE_3way_smallmodel_bench.md  COMPARE_lfm_vs_qwen.md
scripts/: compare_runs.py  custom_model_server_template.py  install.py  serve_lfm25_350m.py  serve_lfm2_1_2b.py  serve_qwen35_0_8b.py  serve_qwen3_0_6b.py
